# preop-covid

./: .gitignore  README.md  pyproject.toml  tox.ini
preop_covid/: analysis1.1.py  analysis1.py  analysis2.py  analysis3.py  analysis4.py  analysis5.py  analysis6.py  case_data.py  covid_lab_values_map.yml  explore.py  health_maintenance_values_map.yml  lab_data.py  preop_data.py  utils.py  vaccine_data.py
preop_covid/utils/: __init__.py  forest_plot.py  metrics.py  parallel_process.py  plotting.py  utils.py
