[tool.poetry]
name = "preop-covid"
version = "0.1.0"
description = ""
authors = ["Philip Chung <philip.f.chung@gmail.com>"]
readme = "README.md"
packages = [{include = "preop_covid"}]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.3.1"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
ipywidgets = "^7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.991"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
pretty = true
color_output = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "skip"
# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Additional Checks
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
# Make sure we are using MyPy
disallow_untyped_calls = true
disallow_untyped_defs = true